--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "discord.io": "^2.5.3",
     "discord.js": "^11.5.1",
-    "winston": "^3.2.1",
-    "express": "3.12.0"
+    "express": "3.12.0",
+    "steamapi": "^2.0.7",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "mocha": "1.20.1",
